--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,13 +13,16 @@
     <h1><%= locals.title ?? '' %></h1>
 
     <% if (locals.loggedIn) { %>
-      <p>Innsrkáður notandi: <%= locals.user.name %> (<%= locals.user.username %>)
+      <p>Innskráður notandi: <%= locals.user.name %> (<%= locals.user.username %>)
     <% } else { %>
-      <p>Þú ert ekki innskráður notandi.</p>
+      <p><a href="/admin">Innskrá</a></p>
     <% } %>
 
     <ul>
       <li><a href="/">Forsíða</a></li>
       <li><a href="/leikir">Leikir</a></li>
       <li><a href="/stada">Staða</a></li>
+      <% if (locals.loggedIn && locals.user.admin) { %>
+      <li><a href="/admin">Admin</a></li>
+      <% } %>
     </ul>
