--- a/views/leikir.ejs
+++ b/views/leikir.ejs
@@ -3,12 +3,12 @@
 <h1>Seinustu leikir</h1>
 
 <table>
-  <th>
-    <td>Heima lið</td>
-    <td>Heima lið skor</td>
-    <td>Útilið</td>
-    <td>Útilið skor</td>
-  </th>
+  <tr>
+    <th>Heima lið</th>
+    <th>Heima lið skor</th>
+    <th>Útilið</th>
+    <th>Útilið skor</th>
+  </tr>
 <% for (const game of locals.games) { %>
   <tr>
     <td><%= game.home.name %></td>
