--- a/views/stada.ejs
+++ b/views/stada.ejs
@@ -2,4 +2,17 @@
 
 <h1>Staðan í deildinni</h1>
 
+<table>
+    <tr>
+      <th>Lið</th>
+      <th>Skor</th>
+    </tr>
+  <% for (const stada of locals.stada) { %>
+    <tr>
+      <td><%= stada.name %></td>
+      <td><%= stada.points %></td>
+    </tr>
+  <% } %>
+</table>
+
 <%- include('footer') -%>
